--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -98,5 +98,8 @@
             });
         });
     </script>
+
+    <!-- Botão com os recursos de acessibilidade do usuário -->
+    {% include 'partials/accessibility_widget.html' %}
 </body>
 </html>
