--- a/application/templates/register_user.html
+++ b/application/templates/register_user.html
@@ -139,5 +139,8 @@
             });
         });
     </script>
+
+    <!-- Botão com os recursos de acessibilidade do usuário -->
+    {% include 'partials/accessibility_widget.html' %}
 </body>
 </html>
