--- a/application/templates/send_filled_document.html
+++ b/application/templates/send_filled_document.html
@@ -230,5 +230,7 @@
 
     </script>
 
+    <!-- Botão com os recursos de acessibilidade do usuário -->
+    {% include 'partials/accessibility_widget.html' %}
 </body>
 </html>
