--- a/application/templates/edit_user.html
+++ b/application/templates/edit_user.html
@@ -126,5 +126,8 @@
             });
         });
     </script>
+
+    <!-- Botão com os recursos de acessibilidade do usuário -->
+    {% include 'partials/accessibility_widget.html' %}
 </body>
 </html>
