--- a/application/templates/edit_user_profile.html
+++ b/application/templates/edit_user_profile.html
@@ -140,5 +140,7 @@
         });
     </script>
 
+    <!-- Botão com os recursos de acessibilidade do usuário -->
+    {% include 'partials/accessibility_widget.html' %}
 </body>
 </html>
