--- a/application/templates/models.html
+++ b/application/templates/models.html
@@ -125,5 +125,8 @@
 
     <!-- Scripts do Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Botão com os recursos de acessibilidade do usuário -->
+    {% include 'partials/accessibility_widget.html' %}
 </body>
 </html>
