--- a/application/static/css/estilos-unificados.css
+++ b/application/static/css/estilos-unificados.css
@@ -378,7 +378,7 @@ body.click-to-speak-active #main-content a:hover {
         left: 0;
         width: 100%;
         justify-content: center;
-        background-color: rgba(255, 255, 255, 0.9);
+        background-color: #3C8C3A;
         padding: 10px 0;
         border-top: 1px solid #ddd;
     }
